# ig-pulse

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  api-integration.md  pyproject.toml
.github/workflows/: deploy.yml
.serena/: project.yml
app/: __init__.py  auth.py  cli.py  config.py  db.py  fetch.py  fetch_jobs.py  ig_client.py  ig_setup.py  main.py  models.py  registry.py  templating.py
app/analysis/: phrases.py  sentiment.py  stopwords.py  stopwords_custom.txt  timetrend.py  tokenize.py  user_stopwords.py  wordfreq.py
app/migrations/: 001_initial.sql  002_user_stopwords.sql
app/registry_migrations/: 001_registry.sql
app/render/: charts.py  export.py  svg.py  wordcloud.py
app/routes/: accounts.py  analysis.py  auth_routes.py  dashboard.py  export.py
app/static/css/: app.css
app/templates/: accounts.html  base.html  dashboard.html  login.html  register.html
app/templates/partials/: _export_modal.html  _hero_meta.html  _sample_modal.html  _wordfreq_filtered.html  _wordfreq_sample.html  frag_phrases.html  frag_sentiment.html  frag_timetrend.html  frag_wordfreq.html  grid.html  scope_response.html
deploy/: .env.example  README.md  docker-compose.prod.yml
docs/: architecture.md  decisions.md  phase0-setup.md  plan.md  product-spec.md  risks.md
docs/design/: design-system.md  handover.md
docs/design/reference/: reference-modal.html  reference-sentiment-wordfreq.html  reference-timetrend.html
docs/superpowers/plans/: 2026-05-23-multi-account.md  2026-05-28-wordfreq-enhancement.md
docs/superpowers/specs/: 2026-05-23-multi-account-design.md  2026-05-28-wordfreq-enhancement-design.md
scripts/: phase2_verify.py  sentiment_compare.py
tests/: conftest.py  test_accounts_routes.py  test_auth.py  test_auth_routes.py  test_charts.py  test_db.py  test_exclude_self.py  test_export.py  test_export_wordfreq_filters.py  test_fetch.py  test_fetch_jobs.py  test_ig_client.py  test_ig_setup.py  test_logging_redaction.py  test_models.py  test_phrases.py  test_registry.py  test_routes.py  test_routes_wordfreq.py  test_sentiment.py  test_sentiment_lock.py  test_stopwords.py  test_svg.py  test_timetrend.py  test_token_expiry.py  test_tokenize.py  test_user_stopwords.py  test_wordcloud.py  test_wordfreq.py  test_wordfreq_comments_with_word.py  test_wordfreq_exclude.py
tests/snapshots/: wordfreq_top100.json
