[project]
name = "ig-pulse"
version = "0.1.0"
description = "Personal Instagram comment analytics — Drone Emprit-style, for your own account."
readme = "README.md"
requires-python = ">=3.11,<3.14"

# Core deps: web stack + light analysis (text + Plotly). Kept installable
# without the heavy ML wheels so foundation work syncs fast.
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "pydantic>=2",
    "pydantic-settings",
    "jinja2",
    "python-multipart",
    "plotly",
    "pillow",
    "Sastrawi",
    "nltk",
]

[project.optional-dependencies]
# Heavy / finicky wheels. Install with: uv sync --extra ml
# (torch+transformers for sentiment, kaleido for Plotly PNG export, wordcloud for the cloud render)
ml = [
    "transformers",
    "torch",
    "kaleido",
    "wordcloud",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
