[project]
name = "ig-pulse"
version = "0.1.0"
description = "Personal Instagram comment analytics — Drone Emprit-style, for your own account."
readme = "README.md"
requires-python = ">=3.11,<3.14"

# Core deps: web stack + light analysis (text + Plotly). Kept installable
# without the heavy ML wheels so foundation work syncs fast.
dependencies = [
    "argon2-cffi",
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "pydantic>=2",
    "pydantic-settings",
    "jinja2",
    "python-multipart",
    "plotly",
    "pillow",
    "Sastrawi",
    "nltk",
    "itsdangerous>=2.2.0",
]

[project.optional-dependencies]
# Heavy / finicky wheels. Install with: uv sync --extra ml
# (torch+transformers for sentiment, kaleido for Plotly PNG export, wordcloud for the cloud render)
ml = [
    # Pin to the stable 4.x line: transformers 5.x mis-routes XLM-RoBERTa's
    # SentencePiece tokenizer through the tiktoken parser and crashes (R8).
    "transformers>=4.44,<5",
    "torch",
    "sentencepiece",  # XLM-RoBERTa tokenizer (cardiffnlp candidate) needs this
    "protobuf",  # XLM-RoBERTa SentencePiece converter reads a protobuf vocab
    "kaleido",
    "wordcloud",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
